--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,7 +13,7 @@ monitor=Virtual-1,1920x1080,0x0,1
 # Environment Variables
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = GTK_THEME,Flat-Remix-GTK-Blue-Dark
+env = GTK_THEME,Adwaita:dark
 env = wayland,x11
 env = QT_QPA_PLATFORM,wayland;xcb
 env = CLUTTER_BACKEND,wayland
